--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ transaction_pool = { package = "substrate-transaction-pool", git = "https://gith
 node-runtime = { git = "https://github.com/paritytech/substrate.git" }
 metadata = { package = "srml-metadata", git = "https://github.com/paritytech/substrate.git" }
 hex = "0.3"
+balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate.git" }
 hex-literal = "0.1"
 regex = "*"
 keyring = { package = "substrate-keyring", git = "https://github.com/paritytech/substrate.git" }
@@ -31,6 +32,7 @@ keyring = { package = "substrate-keyring", git = "https://github.com/paritytech/
 #twox-hash = "1.1.0"
 primitive-types = { version = "0.2", default-features = false, features = ["codec"] }
 clap = { version = "2.33", features = ["yaml"] }
+system = { package = "srml-system", git = "https://github.com/paritytech/substrate.git" }
 
 [features]
 default = ["std"]
