--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ runtime_primitives = { package = "sr-primitives", git = "https://github.com/pari
 inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate.git", default-features = false }
 transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate.git" }
 node-runtime = { git = "https://github.com/paritytech/substrate.git" }
+#substratee-runtime = { package = "node-runtime", git = "https://github.com/scs/substraTEE-node.git" }
 metadata = { package = "srml-metadata", git = "https://github.com/paritytech/substrate.git" }
 hex = "0.3"
 balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate.git" }
