--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,39 +1,43 @@
 [package]
 name = "substrate-api-client"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["Alain Brenzikofer <alain.brenzikofer@scs.ch>"]
 edition = "2018"
 
 [dependencies]
+env_logger = "*"
 ws = "*"
-serde = "1.0"
-serde_derive = "1.0"
-serde_json = "1.0"
-parity-codec = { version = "3.0", default-features = false }
-parity-codec-derive = { version = "3.0", default-features = false }
-tiny-bip39 = "0.6.0"
-substrate_bip39 = { package="substrate-bip39", git = "https://github.com/paritytech/substrate-bip39" }
-rand = "0.6"
-schnorrkel = "0.1"
 hex = "0.3"
-hex-literal = "0.1"
-regex = "*"
-primitive-types = { version = "0.2", default-features = false, features = ["codec"] }
+log = "*"
+rand = "0.6"
 clap = { version = "2.33", features = ["yaml"] }
+serde = "1.0"
+regex = "*"
+schnorrkel = "0.1"
+tiny-bip39 = "0.6.0"
+serde_json = "1.0"
+hex-literal = "0.1"
+serde_derive = "1.0"
+parity-codec = { version = "3.0", default-features = false }
+primitive-types = { version = "0.2", default-features = false, features = ["codec"] }
+parity-codec-derive = { version = "3.0", default-features = false }
 
-primitives = { package = "substrate-primitives", git = "https://github.com/brenzi/substrate.git", branch="global-allocator-feature" }
-node-primitives = { git = "https://github.com/brenzi/substrate.git", branch="global-allocator-feature" }
-runtime_io = { package = "sr-io", git = "https://github.com/brenzi/substrate.git", branch="global-allocator-feature" }
-runtime_primitives = { package = "sr-primitives", git = "https://github.com/brenzi/substrate.git", branch="global-allocator-feature", default-features = false }
-inherents = { package = "substrate-inherents", git = "https://github.com/brenzi/substrate.git", branch="global-allocator-feature", default-features = false }
-transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/brenzi/substrate.git", branch="global-allocator-feature"}
-metadata = { package = "srml-metadata",git = "https://github.com/brenzi/substrate.git", branch="global-allocator-feature" }
-balances = { package = "srml-balances",git = "https://github.com/brenzi/substrate.git", branch="global-allocator-feature" }
-keyring = { package = "substrate-keyring",git = "https://github.com/brenzi/substrate.git", branch="global-allocator-feature" }
-system = { package = "srml-system", git = "https://github.com/brenzi/substrate.git", branch="global-allocator-feature" }
+substrate_bip39 = { package="substrate-bip39", 					git = "https://github.com/paritytech/substrate-bip39" }
+
+primitives = 		{ package = "substrate-primitives", 		git = "https://github.com/paritytech/substrate", rev="6e67eff" }
+node-primitives = 	{											git = "https://github.com/paritytech/substrate", rev="6e67eff" }
+runtime_io = 		{ package = "sr-io", 						git = "https://github.com/paritytech/substrate", rev="6e67eff" }
+transaction_pool = 	{ package = "substrate-transaction-pool",	git = "https://github.com/paritytech/substrate", rev="6e67eff" }
+metadata = 			{ package = "srml-metadata",				git = "https://github.com/paritytech/substrate", rev="6e67eff" }
+balances = 			{ package = "srml-balances",				git = "https://github.com/paritytech/substrate", rev="6e67eff" }
+keyring = 			{ package = "substrate-keyring",			git = "https://github.com/paritytech/substrate", rev="6e67eff" }
+system = 			{ package = "srml-system", 					git = "https://github.com/paritytech/substrate", rev="6e67eff" }
+
+runtime_primitives = { package = "sr-primitives", 				git = "https://github.com/paritytech/substrate", rev="6e67eff", default-features = false }
+inherents = 		 { package = "substrate-inherents", 		git = "https://github.com/paritytech/substrate", rev="6e67eff", default-features = false }
 
 [dev-dependencies]
-node-runtime = { git = "https://github.com/brenzi/substrate.git", branch="global-allocator-feature", features = [ "std" ] }
+node-runtime = { 												git = "https://github.com/paritytech/substrate", rev="6e67eff", features = [ "std" ] }
 
 [features]
 default = ["std"]
