--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "substrate-api-client"
 version = "1.0.0"
-authors = ["Alain Brenzikofer <alain.brenzikofer@scs.ch>"]
+authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
 [dependencies]
