--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,14 @@ authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
 [dependencies]
-env_logger = "*"
-ws = "*"
+env_logger = "0.6"
+ws = "0.7"
 hex = "0.3"
-log = "*"
+log = "0.4"
 rand = "0.6"
 clap = { version = "2.33", features = ["yaml"] }
 serde = "1.0"
-regex = "*"
+regex = "1.1"
 schnorrkel = "0.1"
 tiny-bip39 = "0.6.0"
 serde_json = "1.0"
