[examples/extrinsic] successful balances call with self constructed call enum

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,11 @@ git = 'https://github.com/paritytech/substrate'
 rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'
 package = "substrate-primitives"
 
+[dependencies.indices]
+git = 'https://github.com/paritytech/substrate'
+rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'
+package = "srml-indices"
+
 [dependencies.node-primitives]
 git = 'https://github.com/paritytech/substrate'
 rev = '56b0273fd48b4e742e9da7317bc8e132a740b684'
