[extrinsi] added compose macro that creates an extrinsic completely generic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,3 +95,7 @@ path = "src/examples/example_transfer.rs"
 [[example]]
 name = "example_event_callback"
 path = "src/examples/example_event_callback.rs"
+
+[[example]]
+name = "example_compose_custom_extrinsic"
+path = "src/examples/example_compose_custom_extrinsic.rs"
