--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,3 +99,7 @@ path = "src/examples/example_event_callback.rs"
 [[example]]
 name = "example_generic_compose_extrinsic"
 path = "src/examples/example_generic_compose_extrinsic.rs"
+
+[[example]]
+name = "example_print_metadata"
+path = "src/examples/example_print_metadata.rs"
