--- a/Cargo.toml
+++ b/Cargo.toml
@@ -140,3 +140,7 @@ path = "src/examples/example_contract.rs"
 [[example]]
 name = "example_custom_storage_struct"
 path = "src/examples/example_custom_storage_struct.rs"
+
+[[example]]
+name = "example_compose_extrinsic_offline"
+path = "src/examples/example_compose_extrinsic_offline.rs"
