--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,18 +5,18 @@ authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
 [dependencies]
-env_logger = "0.6"
-ws = "0.7"
-hex = "0.3"
-log = "0.4"
-clap = { version = "2.33", features = ["yaml"] }
-serde = "1.0"
-regex = "1.1"
-serde_json = "1.0"
-hex-literal = "0.1"
-serde_derive = "1.0"
+env_logger        = { version = "0.6.2", git = "https://github.com/mesalock-linux/env_logger-sgx" }
+ws = { version = "0.7", optional = true }
+# hex = { version = "0.3", default-features=false }
+log = { git = "https://github.com/mesalock-linux/log-sgx" }
+serde        	= { version = "1.0.97", git = "https://github.com/mesalock-linux/serde-sgx" }
+serde_derive    = { version = "1.0.97", git = "https://github.com/mesalock-linux/serde-sgx" }
+
 primitive-types = { version = "0.5", default-features = false, features = ["codec"] }
 parity-codec-derive = { version = "3.3", default-features = false }
+
+[target.'cfg(not(target_env = "sgx"))'.dependencies]
+sgx_tstd      = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk", features = ["untrusted_fs","net","backtrace"] }
 
 [dependencies.primitives]
 git = 'https://github.com/paritytech/substrate'
@@ -25,10 +25,14 @@ default-features=false
 package = "substrate-primitives"
 
 [dependencies.codec]
-default-features = false
 package = "parity-scale-codec"
 features = ["derive"]
 version = "1.0.0"
+default-features = false
+
+[dependencies.serde_json]
+version = "1.0"
+optional = true
 
 [dependencies.indices]
 git = 'https://github.com/paritytech/substrate'
@@ -105,6 +109,11 @@ git = 'https://github.com/paritytech/substrate'
 rev = '9b08e7ff938a45dbec7fcdb854063202e2b0cb48'
 package = "substrate-keyring"
 
+[dev-dependencies.clap] 
+version = "2.33"
+features = ["yaml"] 
+
+
 
 [features]
 default = ["std"]
@@ -121,6 +130,8 @@ std = [
 	"runtime_io/std",
 	"indices/std",
 	"primitives/std",
+	"ws",
+	"serde_json",
 ]
 
 [[example]]
