--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,13 @@ authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
 [dependencies]
-env_logger        = { version = "0.6.2", git = "https://github.com/mesalock-linux/env_logger-sgx" }
+env_logger        = { version = "0.6.2", git = "https://github.com/mesalock-linux/env_logger-sgx", default-features=false }
 ws = { version = "0.7", optional = true }
-# hex = { version = "0.3", default-features=false }
-log = { git = "https://github.com/mesalock-linux/log-sgx" }
-serde        	= { version = "1.0.97", git = "https://github.com/mesalock-linux/serde-sgx" }
-serde_derive    = { version = "1.0.97", git = "https://github.com/mesalock-linux/serde-sgx" }
-
+hex = { version = "0.3", default-features=false, optional = true }
+log = { git = "https://github.com/mesalock-linux/log-sgx", default-features=false }
+serde        	= { version = "1.0.97", git = "https://github.com/mesalock-linux/serde-sgx", default-features=false, features = ["derive"]}
+serde_derive    = { version = "1.0.97", git = "https://github.com/mesalock-linux/serde-sgx", default-features=false }
+serde_json      = { version = "1.0.36", git = "https://github.com/mesalock-linux/serde-json-sgx", default-features=false}
 primitive-types = { version = "0.5", default-features = false, features = ["codec"] }
 parity-codec-derive = { version = "3.3", default-features = false }
 
@@ -29,10 +29,6 @@ package = "parity-scale-codec"
 features = ["derive"]
 version = "1.0.0"
 default-features = false
-
-[dependencies.serde_json]
-version = "1.0"
-optional = true
 
 [dependencies.indices]
 git = 'https://github.com/paritytech/substrate'
@@ -113,12 +109,9 @@ package = "substrate-keyring"
 version = "2.33"
 features = ["yaml"] 
 
-
-
 [features]
-default = ["std", "mesalock_sgx"]
+default = ["std"]
 std = [
-	"mesalock_sgx",
 	"primitives/std",
 	"codec/std",
     "runtime_primitives/std",
@@ -131,8 +124,9 @@ std = [
 	"runtime_io/std",
 	"indices/std",
 	"primitives/std",
+	"serde/std",
 	"ws",
-	"serde_json",
+	"hex",
 ]
 mesalock_sgx = ["sgx_tstd"]
 
