--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -5,11 +5,10 @@ authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 
 [dependencies]
-rstd = { package = "sr-std", path = "../sr-std", default-features = false }
 codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
 rustc-hex = { version = "2.0", default-features = false }
 serde = { version = "1.0", optional = true, features = ["derive"] }
-twox-hash = { version = "1.2.0", optional = true }
+twox-hash = { version = "1.2.0", default-features = false }
 byteorder = { version = "1.3.1", default-features = false }
 primitive-types = { version = "0.5.0", default-features = false, features = ["codec"] }
 impl-serde = { version = "0.1", optional = true }
@@ -17,23 +16,29 @@ log = { version = "0.4", optional = true }
 wasmi = { version = "0.5.0", optional = true }
 hash-db = { version = "0.15.2", default-features = false }
 hash256-std-hasher = { version = "0.15.2", default-features = false }
-ed25519-dalek = { version = "1.0.0-pre.1", optional = true }
+ed25519-dalek = { version = "1.0.0-pre.1", default-features = false, features = ["u64_backend"]}
 base58 = { version = "0.1", optional = true }
-blake2-rfc = { version = "0.2.18", optional = true }
+blake2-rfc = { version = "0.2.18", default-features = false }
 schnorrkel = { version = "0.8.4", features = ["preaudit_deprecated"], optional = true }
 rand = { version = "0.6", optional = true }
 sha2 = { version = "0.8", optional = true }
 substrate-bip39 = { version = "0.3.1", optional = true }
 tiny-bip39 = { version = "0.6.1", optional = true }
-hex = { version = "0.3", optional = true }
+hex = { version = "0.3", default-features = false }
 regex = { version = "1.1", optional = true }
 num-traits = { version = "0.2", default-features = false }
 zeroize = { version = "0.9.2", default-features = false }
-lazy_static = { version = "1.3", optional = true }
-parking_lot = { version = "0.9.0", optional = true }
+lazy_static = { version = "1.3", default-features = false }
+parking_lot = { version = "0.9.0", default-features = false }
+
+[dependencies.rstd]
+git = 'https://github.com/paritytech/substrate'
+rev = '9b08e7ff938a45dbec7fcdb854063202e2b0cb48'
+package = "sr-std"
+default-features = false
 
 [dev-dependencies]
-substrate-serializer = { path = "../serializer" }
+#substrate-serializer = { path = "../serializer" }
 pretty_assertions = "0.6"
 hex-literal = "0.2"
 rand = "0.6"
@@ -51,8 +56,6 @@ default = ["std"]
 std = [
 	"log",
 	"wasmi",
-	"lazy_static",
-    "parking_lot",
 	"primitive-types/std",
 	"primitive-types/serde",
 	"primitive-types/byteorder",
@@ -65,10 +68,9 @@ std = [
 	"rstd/std",
 	"serde",
 	"rustc-hex/std",
-	"twox-hash",
-	"blake2-rfc",
-	"ed25519-dalek",
-	"hex",
+	"twox-hash/std",
+	"blake2-rfc/std",
+	"ed25519-dalek/std",
 	"base58",
 	"substrate-bip39",
 	"tiny-bip39",
@@ -79,5 +81,5 @@ std = [
 	"schnorrkel",
 	"regex",
 	"num-traits/std",
-	"zeroize/std"
+	"zeroize/std",
 ]
