--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -19,7 +19,7 @@ hash256-std-hasher = { version = "0.15.2", default-features = false }
 ed25519-dalek = { version = "1.0.0-pre.1", default-features = false, features = ["u64_backend"]}
 base58 = { version = "0.1", optional = true }
 blake2-rfc = { version = "0.2.18", default-features = false }
-schnorrkel = { version = "0.8.4", features = ["preaudit_deprecated"], optional = true }
+schnorrkel = { version = "0.8.5", features = ["preaudit_deprecated"], default-features = false }
 rand = { version = "0.6", optional = true }
 sha2 = { version = "0.8", optional = true }
 substrate-bip39 = { version = "0.3.1", optional = true }
@@ -78,7 +78,6 @@ std = [
 	"byteorder/std",
 	"rand",
 	"sha2",
-	"schnorrkel",
 	"regex",
 	"num-traits/std",
 	"zeroize/std",
