--- a/test_no_std/Cargo.toml
+++ b/test_no_std/Cargo.toml
@@ -11,7 +11,7 @@ panic = "abort"
 panic = "abort"
 
 [dependencies]
-libc = "0.2"
+libc = { version="0.2", default-features=false }
 
 [dependencies.substrate-api-client] 
 package = "substrate-api-client"
