--- a/test_no_std/Cargo.toml
+++ b/test_no_std/Cargo.toml
@@ -21,14 +21,14 @@ default-features=false
 [dependencies.sr-io]
 git = "https://github.com/scs/substraTEE-node"
 package = 'sr-io'
-branch = "brenzi-private-tx"
+tag = "M5"
 default-features=false
 features = ["no_oom", "no_panic_handler"]
 
 [patch.'https://github.com/paritytech/substrate']
-sr-io = { git = "https://github.com/scs/substraTEE-node", branch = "brenzi-private-tx"}
+sr-io = { git = "https://github.com/scs/substraTEE-node", tag = "M5"}
 substrate-primitives = { path = "../primitives"}
-substrate-application-crypto = { git = "https://github.com/scs/substraTEE-worker", branch = "brenzi-private-tx"}
+substrate-application-crypto = { git = "https://github.com/scs/substraTEE-worker", tag = "M5"}
 
 [patch.'https://github.com/scs/substrate-api-client']
 substrate-primitives = { path = "../primitives"}
