--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -6,31 +6,31 @@ edition = "2018"
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
-rustc-hex = { version = "2.0", default-features = false }
-serde = { version = "1.0", optional = true, features = ["derive"] }
-twox-hash = { version = "1.3.0", default-features = false }
-byteorder = { version = "1.3.1", default-features = false }
-primitive-types = { version = "0.5.0", default-features = false, features = ["codec"] }
-impl-serde = { version = "0.1", optional = true }
-log = { version = "0.4", optional = true }
-wasmi = { version = "0.5.0", optional = true }
+rustc-hex = { version = "2.0.1", default-features = false }
+serde = { version = "1.0.101", optional = true, features = ["derive"] }
+twox-hash = { version = "1.5.0", default-features = false }
+byteorder = { version = "1.3.2", default-features = false }
+primitive-types = { version = "0.5.1", default-features = false, features = ["codec"] }
+impl-serde = { version = "0.2.1", optional = true }
+log = { version = "0.4.8", optional = true }
+wasmi = { version = "0.5.1", optional = true }
 hash-db = { version = "0.15.2", default-features = false }
 hash256-std-hasher = { version = "0.15.2", default-features = false }
-base58 = { version = "0.1", optional = true }
-rand = { version = "0.6", optional = true }
-sha2 = { version = "0.8", optional = true }
+base58 = { version = "0.1.0", optional = true }
+rand = { version = "0.7.2", optional = true }
+sha2 = { version = "0.8.0", optional = true }
 substrate-bip39 = { version = "0.3.1", optional = true }
-tiny-bip39 = { version = "0.6.1", optional = true }
-hex = { version = "0.4", default-features = false }
-regex = { version = "1.1", optional = true }
-num-traits = { version = "0.2", default-features = false }
-zeroize = { version = "0.9.2", default-features = false }
-lazy_static = { version = "1.3", default-features = false }
+tiny-bip39 = { version = "0.6.2", optional = true }
+hex = { version = "0.3.2", default-features = false }
+regex = { version = "1.3.1", optional = true }
+num-traits = { version = "0.2.8", default-features = false }
+zeroize = "0.10.1"
+lazy_static = { version = "1.4.0", default-features = false }
 parking_lot = { version = "0.9.0", optional = true }
 
 [dependencies.rstd]
 git = 'https://github.com/paritytech/substrate'
-rev = '9b08e7ff938a45dbec7fcdb854063202e2b0cb48'
+rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
 package = "sr-std"
 default-features = false
 
@@ -69,6 +69,7 @@ default = ["std"]
 std = [
 	"log",
 	"wasmi",
+    "parking_lot",
 	"primitive-types/std",
 	"primitive-types/serde",
 	"primitive-types/byteorder",
@@ -92,7 +93,5 @@ std = [
 	"rand",
 	"sha2",
 	"regex",
-	"parking_lot",
 	"num-traits/std",
-	"zeroize/std",
 ]
