--- a/test_no_std/Cargo.toml
+++ b/test_no_std/Cargo.toml
@@ -19,13 +19,14 @@ path = ".."
 default-features=false
 
 [dependencies.sr-io]
-git = "https://github.com/paritytech/substrate"
-rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
+git = "https://github.com/scs/substraTEE-node"
+rev = 'd4a057c5841796994b46b6b35de922ec5777fec5'
 package = 'sr-io'
 default-features=false
 features = ["no_oom", "no_panic_handler"]
 
 [patch.'https://github.com/paritytech/substrate']
+sr-io = { git = "https://github.com/scs/substraTEE-node", rev = 'd4a057c5841796994b46b6b35de922ec5777fec5' }
 substrate-primitives = { path = "../primitives"}
 substrate-application-crypto = { git = "https://github.com/scs/substraTEE-worker" }
 
